# uber_system_design_clone

./: .dockerignore  .gitignore  AI_HANDOFF.md  CMakeLists.txt  Dockerfile  Main.cpp  PROJECT_INTERVIEW_QA.md  README (1).md.txt  readme.md
src/auth/: AuthStore.cpp  test.cpp
src/domain/: Driver.cpp  Ride.cpp  Rider.cpp
src/factory/: VehicleFactory.cpp
src/graph/: CityGraph.cpp  Edge.cpp  Location.cpp  RouteResult.cpp
src/matching/: DriverMatch.cpp
src/persistence/: RideHistoryStore.cpp
src/pricing/: NormalPricing.cpp  PoolPricing.cpp  PricingStrategy.cpp  SurgePricing.cpp
src/service/: DriverMatchingService.cpp  NotificationService.cpp  PricingService.cpp  RideService.cpp  RouteService.cpp
src/vehicle/: Auto.cpp  Bike.cpp  SUV.cpp  Sedan.cpp  Vehicle.cpp
src/web/: WebServer.cpp
